parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> expr ;
Rule 8     instruction -> assignment_statement ;
Rule 9     instruction -> if_statement
Rule 10    instruction -> loop
Rule 11    instruction -> BREAK ;
Rule 12    instruction -> CONTINUE ;
Rule 13    instruction -> print_statement ;
Rule 14    instruction -> return_statement ;
Rule 15    expr -> expr + expr
Rule 16    expr -> expr - expr
Rule 17    expr -> expr * expr
Rule 18    expr -> expr / expr
Rule 19    expr -> expr DOTADD expr
Rule 20    expr -> expr DOTSUB expr
Rule 21    expr -> expr DOTMUL expr
Rule 22    expr -> expr DOTDIV expr
Rule 23    expr -> expr < expr
Rule 24    expr -> expr > expr
Rule 25    expr -> expr LE expr
Rule 26    expr -> expr GE expr
Rule 27    expr -> expr NE expr
Rule 28    expr -> expr EQ expr
Rule 29    expr -> [ matrix_init ]
Rule 30    expr -> matrix_init_name ( expr )
Rule 31    expr -> INTNUM
Rule 32    expr -> FLOATNUM
Rule 33    expr -> assignable
Rule 34    expr -> ( expr )
Rule 35    expr -> - expr
Rule 36    expr -> expr '
Rule 37    assignment_statement -> assignable = expr
Rule 38    assignment_statement -> assignable ADDASSIGN expr
Rule 39    assignment_statement -> assignable SUBASSIGN expr
Rule 40    assignment_statement -> assignable MULASSIGN expr
Rule 41    assignment_statement -> assignable DIVASSIGN expr
Rule 42    assignable -> ID
Rule 43    assignable -> ID [ expr , expr ]
Rule 44    matrix_init -> [ vector ]
Rule 45    matrix_init -> matrix_init , [ vector ]
Rule 46    vector -> expr
Rule 47    vector -> vector , expr
Rule 48    matrix_init_name -> EYE
Rule 49    matrix_init_name -> ZEROS
Rule 50    matrix_init_name -> ONES
Rule 51    if_statement -> IF ( expr ) instruction
Rule 52    if_statement -> IF ( expr ) instruction ELSE instruction
Rule 53    loop -> for_loop
Rule 54    loop -> while_loop
Rule 55    for_loop -> FOR ID = range instruction
Rule 56    while_loop -> WHILE ( expr ) instruction
Rule 57    range -> expr : expr
Rule 58    print_statement -> PRINT printables
Rule 59    printables -> printable
Rule 60    printables -> printables , printable
Rule 61    printable -> expr
Rule 62    printable -> STRING
Rule 63    return_statement -> RETURN
Rule 64    return_statement -> RETURN expr
Rule 65    return_statement -> RETURN STRING

Terminals, with rules where they appear

'                    : 36
(                    : 30 34 51 52 56
)                    : 30 34 51 52 56
*                    : 17
+                    : 15
,                    : 43 45 47 60
-                    : 16 35
/                    : 18
:                    : 57
;                    : 7 8 11 12 13 14
<                    : 23
=                    : 37 55
>                    : 24
ADDASSIGN            : 38
BREAK                : 11
CONTINUE             : 12
DIVASSIGN            : 41
DOTADD               : 19
DOTDIV               : 22
DOTMUL               : 21
DOTSUB               : 20
ELSE                 : 52
EQ                   : 28
EYE                  : 48
FLOATNUM             : 32
FOR                  : 55
GE                   : 26
ID                   : 42 43 55
IF                   : 51 52
INTNUM               : 31
LE                   : 25
MULASSIGN            : 40
NE                   : 27
ONES                 : 50
PRINT                : 58
RETURN               : 63 64 65
STRING               : 62 65
SUBASSIGN            : 39
WHILE                : 56
ZEROS                : 49
[                    : 29 43 44 45
]                    : 29 43 44 45
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

assignable           : 33 37 38 39 40 41
assignment_statement : 8
expr                 : 7 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 30 34 35 36 37 38 39 40 41 43 43 46 47 51 52 56 57 57 61 64
for_loop             : 53
if_statement         : 9
instruction          : 4 5 51 52 52 55 56
instructions         : 3 4 6
instructions_opt     : 1
loop                 : 10
matrix_init          : 29 45
matrix_init_name     : 30
print_statement      : 13
printable            : 59 60
printables           : 58 60
program              : 0
range                : 55
return_statement     : 14
vector               : 44 45 47
while_loop           : 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . expr ;
    (8) instruction -> . assignment_statement ;
    (9) instruction -> . if_statement
    (10) instruction -> . loop
    (11) instruction -> . BREAK ;
    (12) instruction -> . CONTINUE ;
    (13) instruction -> . print_statement ;
    (14) instruction -> . return_statement ;
    (15) expr -> . expr + expr
    (16) expr -> . expr - expr
    (17) expr -> . expr * expr
    (18) expr -> . expr / expr
    (19) expr -> . expr DOTADD expr
    (20) expr -> . expr DOTSUB expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTDIV expr
    (23) expr -> . expr < expr
    (24) expr -> . expr > expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr GE expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . [ matrix_init ]
    (30) expr -> . matrix_init_name ( expr )
    (31) expr -> . INTNUM
    (32) expr -> . FLOATNUM
    (33) expr -> . assignable
    (34) expr -> . ( expr )
    (35) expr -> . - expr
    (36) expr -> . expr '
    (37) assignment_statement -> . assignable = expr
    (38) assignment_statement -> . assignable ADDASSIGN expr
    (39) assignment_statement -> . assignable SUBASSIGN expr
    (40) assignment_statement -> . assignable MULASSIGN expr
    (41) assignment_statement -> . assignable DIVASSIGN expr
    (51) if_statement -> . IF ( expr ) instruction
    (52) if_statement -> . IF ( expr ) instruction ELSE instruction
    (53) loop -> . for_loop
    (54) loop -> . while_loop
    (58) print_statement -> . PRINT printables
    (63) return_statement -> . RETURN
    (64) return_statement -> . RETURN expr
    (65) return_statement -> . RETURN STRING
    (48) matrix_init_name -> . EYE
    (49) matrix_init_name -> . ZEROS
    (50) matrix_init_name -> . ONES
    (42) assignable -> . ID
    (43) assignable -> . ID [ expr , expr ]
    (55) for_loop -> . FOR ID = range instruction
    (56) while_loop -> . WHILE ( expr ) instruction

    $end            reduce using rule 2 (instructions_opt -> .)
    {               shift and go to state 5
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    [               shift and go to state 15
    INTNUM          shift and go to state 18
    FLOATNUM        shift and go to state 19
    (               shift and go to state 17
    -               shift and go to state 14
    IF              shift and go to state 21
    PRINT           shift and go to state 24
    RETURN          shift and go to state 25
    EYE             shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    ID              shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    expr                           shift and go to state 6
    assignment_statement           shift and go to state 7
    if_statement                   shift and go to state 8
    loop                           shift and go to state 9
    print_statement                shift and go to state 12
    return_statement               shift and go to state 13
    matrix_init_name               shift and go to state 16
    assignable                     shift and go to state 20
    for_loop                       shift and go to state 22
    while_loop                     shift and go to state 23

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . expr ;
    (8) instruction -> . assignment_statement ;
    (9) instruction -> . if_statement
    (10) instruction -> . loop
    (11) instruction -> . BREAK ;
    (12) instruction -> . CONTINUE ;
    (13) instruction -> . print_statement ;
    (14) instruction -> . return_statement ;
    (15) expr -> . expr + expr
    (16) expr -> . expr - expr
    (17) expr -> . expr * expr
    (18) expr -> . expr / expr
    (19) expr -> . expr DOTADD expr
    (20) expr -> . expr DOTSUB expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTDIV expr
    (23) expr -> . expr < expr
    (24) expr -> . expr > expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr GE expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . [ matrix_init ]
    (30) expr -> . matrix_init_name ( expr )
    (31) expr -> . INTNUM
    (32) expr -> . FLOATNUM
    (33) expr -> . assignable
    (34) expr -> . ( expr )
    (35) expr -> . - expr
    (36) expr -> . expr '
    (37) assignment_statement -> . assignable = expr
    (38) assignment_statement -> . assignable ADDASSIGN expr
    (39) assignment_statement -> . assignable SUBASSIGN expr
    (40) assignment_statement -> . assignable MULASSIGN expr
    (41) assignment_statement -> . assignable DIVASSIGN expr
    (51) if_statement -> . IF ( expr ) instruction
    (52) if_statement -> . IF ( expr ) instruction ELSE instruction
    (53) loop -> . for_loop
    (54) loop -> . while_loop
    (58) print_statement -> . PRINT printables
    (63) return_statement -> . RETURN
    (64) return_statement -> . RETURN expr
    (65) return_statement -> . RETURN STRING
    (48) matrix_init_name -> . EYE
    (49) matrix_init_name -> . ZEROS
    (50) matrix_init_name -> . ONES
    (42) assignable -> . ID
    (43) assignable -> . ID [ expr , expr ]
    (55) for_loop -> . FOR ID = range instruction
    (56) while_loop -> . WHILE ( expr ) instruction

    $end            reduce using rule 3 (instructions_opt -> instructions .)
    {               shift and go to state 5
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    [               shift and go to state 15
    INTNUM          shift and go to state 18
    FLOATNUM        shift and go to state 19
    (               shift and go to state 17
    -               shift and go to state 14
    IF              shift and go to state 21
    PRINT           shift and go to state 24
    RETURN          shift and go to state 25
    EYE             shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    ID              shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31

    instruction                    shift and go to state 32
    expr                           shift and go to state 6
    assignment_statement           shift and go to state 7
    if_statement                   shift and go to state 8
    loop                           shift and go to state 9
    print_statement                shift and go to state 12
    return_statement               shift and go to state 13
    matrix_init_name               shift and go to state 16
    assignable                     shift and go to state 20
    for_loop                       shift and go to state 22
    while_loop                     shift and go to state 23

state 4

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    [               reduce using rule 5 (instructions -> instruction .)
    INTNUM          reduce using rule 5 (instructions -> instruction .)
    FLOATNUM        reduce using rule 5 (instructions -> instruction .)
    (               reduce using rule 5 (instructions -> instruction .)
    -               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    EYE             reduce using rule 5 (instructions -> instruction .)
    ZEROS           reduce using rule 5 (instructions -> instruction .)
    ONES            reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . expr ;
    (8) instruction -> . assignment_statement ;
    (9) instruction -> . if_statement
    (10) instruction -> . loop
    (11) instruction -> . BREAK ;
    (12) instruction -> . CONTINUE ;
    (13) instruction -> . print_statement ;
    (14) instruction -> . return_statement ;
    (15) expr -> . expr + expr
    (16) expr -> . expr - expr
    (17) expr -> . expr * expr
    (18) expr -> . expr / expr
    (19) expr -> . expr DOTADD expr
    (20) expr -> . expr DOTSUB expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTDIV expr
    (23) expr -> . expr < expr
    (24) expr -> . expr > expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr GE expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . [ matrix_init ]
    (30) expr -> . matrix_init_name ( expr )
    (31) expr -> . INTNUM
    (32) expr -> . FLOATNUM
    (33) expr -> . assignable
    (34) expr -> . ( expr )
    (35) expr -> . - expr
    (36) expr -> . expr '
    (37) assignment_statement -> . assignable = expr
    (38) assignment_statement -> . assignable ADDASSIGN expr
    (39) assignment_statement -> . assignable SUBASSIGN expr
    (40) assignment_statement -> . assignable MULASSIGN expr
    (41) assignment_statement -> . assignable DIVASSIGN expr
    (51) if_statement -> . IF ( expr ) instruction
    (52) if_statement -> . IF ( expr ) instruction ELSE instruction
    (53) loop -> . for_loop
    (54) loop -> . while_loop
    (58) print_statement -> . PRINT printables
    (63) return_statement -> . RETURN
    (64) return_statement -> . RETURN expr
    (65) return_statement -> . RETURN STRING
    (48) matrix_init_name -> . EYE
    (49) matrix_init_name -> . ZEROS
    (50) matrix_init_name -> . ONES
    (42) assignable -> . ID
    (43) assignable -> . ID [ expr , expr ]
    (55) for_loop -> . FOR ID = range instruction
    (56) while_loop -> . WHILE ( expr ) instruction

    {               shift and go to state 5
    BREAK           shift and go to state 10
    CONTINUE        shift and go to state 11
    [               shift and go to state 15
    INTNUM          shift and go to state 18
    FLOATNUM        shift and go to state 19
    (               shift and go to state 17
    -               shift and go to state 14
    IF              shift and go to state 21
    PRINT           shift and go to state 24
    RETURN          shift and go to state 25
    EYE             shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    ID              shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31

    instructions                   shift and go to state 33
    instruction                    shift and go to state 4
    expr                           shift and go to state 6
    assignment_statement           shift and go to state 7
    if_statement                   shift and go to state 8
    loop                           shift and go to state 9
    print_statement                shift and go to state 12
    return_statement               shift and go to state 13
    matrix_init_name               shift and go to state 16
    assignable                     shift and go to state 20
    for_loop                       shift and go to state 22
    while_loop                     shift and go to state 23

state 6

    (7) instruction -> expr . ;
    (15) expr -> expr . + expr
    (16) expr -> expr . - expr
    (17) expr -> expr . * expr
    (18) expr -> expr . / expr
    (19) expr -> expr . DOTADD expr
    (20) expr -> expr . DOTSUB expr
    (21) expr -> expr . DOTMUL expr
    (22) expr -> expr . DOTDIV expr
    (23) expr -> expr . < expr
    (24) expr -> expr . > expr
    (25) expr -> expr . LE expr
    (26) expr -> expr . GE expr
    (27) expr -> expr . NE expr
    (28) expr -> expr . EQ expr
    (36) expr -> expr . '

    ;               shift and go to state 34
    +               shift and go to state 35
    -               shift and go to state 36
    *               shift and go to state 37
    /               shift and go to state 38
    DOTADD          shift and go to state 39
    DOTSUB          shift and go to state 40
    DOTMUL          shift and go to state 41
    DOTDIV          shift and go to state 42
    <               shift and go to state 43
    >               shift and go to state 44
    LE              shift and go to state 45
    GE              shift and go to state 46
    NE              shift and go to state 47
    EQ              shift and go to state 48
    '               shift and go to state 49


state 7

    (8) instruction -> assignment_statement . ;

    ;               shift and go to state 50


state 8

    (9) instruction -> if_statement .

    {               reduce using rule 9 (instruction -> if_statement .)
    BREAK           reduce using rule 9 (instruction -> if_statement .)
    CONTINUE        reduce using rule 9 (instruction -> if_statement .)
    [               reduce using rule 9 (instruction -> if_statement .)
    INTNUM          reduce using rule 9 (instruction -> if_statement .)
    FLOATNUM        reduce using rule 9 (instruction -> if_statement .)
    (               reduce using rule 9 (instruction -> if_statement .)
    -               reduce using rule 9 (instruction -> if_statement .)
    IF              reduce using rule 9 (instruction -> if_statement .)
    PRINT           reduce using rule 9 (instruction -> if_statement .)
    RETURN          reduce using rule 9 (instruction -> if_statement .)
    EYE             reduce using rule 9 (instruction -> if_statement .)
    ZEROS           reduce using rule 9 (instruction -> if_statement .)
    ONES            reduce using rule 9 (instruction -> if_statement .)
    ID              reduce using rule 9 (instruction -> if_statement .)
    FOR             reduce using rule 9 (instruction -> if_statement .)
    WHILE           reduce using rule 9 (instruction -> if_statement .)
    $end            reduce using rule 9 (instruction -> if_statement .)
    }               reduce using rule 9 (instruction -> if_statement .)
    ELSE            reduce using rule 9 (instruction -> if_statement .)


state 9

    (10) instruction -> loop .

    {               reduce using rule 10 (instruction -> loop .)
    BREAK           reduce using rule 10 (instruction -> loop .)
    CONTINUE        reduce using rule 10 (instruction -> loop .)
    [               reduce using rule 10 (instruction -> loop .)
    INTNUM          reduce using rule 10 (instruction -> loop .)
    FLOATNUM        reduce using rule 10 (instruction -> loop .)
    (               reduce using rule 10 (instruction -> loop .)
    -               reduce using rule 10 (instruction -> loop .)
    IF              reduce using rule 10 (instruction -> loop .)
    PRINT           reduce using rule 10 (instruction -> loop .)
    RETURN          reduce using rule 10 (instruction -> loop .)
    EYE             reduce using rule 10 (instruction -> loop .)
    ZEROS           reduce using rule 10 (instruction -> loop .)
    ONES            reduce using rule 10 (instruction -> loop .)
    ID              reduce using rule 10 (instruction -> loop .)
    FOR             reduce using rule 10 (instruction -> loop .)
    WHILE           reduce using rule 10 (instruction -> loop .)
    $end            reduce using rule 10 (instruction -> loop .)
    }               reduce using rule 10 (instruction -> loop .)
    ELSE            reduce using rule 10 (instruction -> loop .)


state 10

    (11) instruction -> BREAK . ;

    ;               shift and go to state 51


state 11

    (12) instruction -> CONTINUE . ;

    ;               shift and go to state 52


state 12

    (13) instruction -> print_statement . ;

    ;               shift and go to state 53


state 13

    (14) instruction -> return_statement . ;

    ;               shift and go to state 54


state 14

    (35) expr -> - . expr
    (15) expr -> . expr + expr
    (16) expr -> . expr - expr
    (17) expr -> . expr * expr
    (18) expr -> . expr / expr
    (19) expr -> . expr DOTADD expr
    (20) expr -> . expr DOTSUB expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTDIV expr
    (23) expr -> . expr < expr
    (24) expr -> . expr > expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr GE expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . [ matrix_init ]
    (30) expr -> . matrix_init_name ( expr )
    (31) expr -> . INTNUM
    (32) expr -> . FLOATNUM
    (33) expr -> . assignable
    (34) expr -> . ( expr )
    (35) expr -> . - expr
    (36) expr -> . expr '
    (48) matrix_init_name -> . EYE
    (49) matrix_init_name -> . ZEROS
    (50) matrix_init_name -> . ONES
    (42) assignable -> . ID
    (43) assignable -> . ID [ expr , expr ]

    [               shift and go to state 15
    INTNUM          shift and go to state 18
    FLOATNUM        shift and go to state 19
    (               shift and go to state 17
    -               shift and go to state 14
    EYE             shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    ID              shift and go to state 29

    expr                           shift and go to state 55
    matrix_init_name               shift and go to state 16
    assignable                     shift and go to state 56

state 15

    (29) expr -> [ . matrix_init ]
    (44) matrix_init -> . [ vector ]
    (45) matrix_init -> . matrix_init , [ vector ]

    [               shift and go to state 57

    matrix_init                    shift and go to state 58

state 16

    (30) expr -> matrix_init_name . ( expr )

    (               shift and go to state 59


state 17

    (34) expr -> ( . expr )
    (15) expr -> . expr + expr
    (16) expr -> . expr - expr
    (17) expr -> . expr * expr
    (18) expr -> . expr / expr
    (19) expr -> . expr DOTADD expr
    (20) expr -> . expr DOTSUB expr
    (21) expr -> . expr DOTMUL expr
    (22) expr -> . expr DOTDIV expr
    (23) expr -> . expr < expr
    (24) expr -> . expr > expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr GE expr
    (27) expr -> . expr NE expr
    (28) expr -> . expr EQ expr
    (29) expr -> . [ matrix_init ]
    (30) expr -> . matrix_init_name ( expr )
    (31) expr -> . INTNUM
    (32) expr -> . FLOATNUM
    (33) expr -> . assignable
    (34) expr -> . ( expr )
    (35) expr -> . - expr
    (36) expr -> . expr '
    (48) matrix_init_name -> . EYE
    (49) matrix_init_name -> . ZEROS
    (50) matrix_init_name -> . ONES
    (42) assignable -> . ID
    (43) assignable -> . ID [ expr , expr ]

    [               shift and go to state 15
    INTNUM          shift and go to state 18
    FLOATNUM        shift and go to state 19
    (               shift and go to state 17
    -               shift and go to state 14
    EYE             shift and go to state 26
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    ID              shift and go to state 29

    expr                           shift and go to state 60
    matrix_init_name               shift and go to state 16
    assignable                     shift and go to state 56

state 18

    (31) expr -> INTNUM .

    ;               reduce using rule 31 (expr -> INTNUM .)
    +               reduce using rule 31 (expr -> INTNUM .)
    -               reduce using rule 31 (expr -> INTNUM .)
    *               reduce using rule 31 (expr -> INTNUM .)
    /               reduce using rule 31 (expr -> INTNUM .)
    DOTADD          reduce using rule 31 (expr -> INTNUM .)
    DOTSUB          reduce using rule 31 (expr -> INTNUM .)
    DOTMUL          reduce using rule 31 (expr -> INTNUM .)
    DOTDIV          reduce using rule 31 (expr -> INTNUM .)
    <               reduce using rule 31 (expr -> INTNUM .)
    >               reduce using rule 31 (expr -> INTNUM .)
    LE              reduce using rule 31 (expr -> INTNUM .)
    GE              reduce using rule 31 (expr -> INTNUM .)
    NE              reduce using rule 31 (expr -> INTNUM .)
    EQ              reduce using rule 31 (expr -> INTNUM .)
    '               reduce using rule 31 (expr -> INTNUM .)
    )               reduce using rule 31 (expr -> INTNUM .)
    ,               reduce using rule 31 (expr -> INTNUM .)
    ]               reduce using rule 31 (expr -> INTNUM .)
    :               reduce using rule 31 (expr -> INTNUM .)
    {               reduce using rule 31 (expr -> INTNUM .)
    BREAK           reduce using rule 31 (expr -> INTNUM .)
    CONTINUE        reduce using rule 31 (expr -> INTNUM .)
    [               reduce using rule 31 (expr -> INTNUM .)
    INTNUM          reduce using rule 31 (expr -> INTNUM .)
    FLOATNUM        reduce using rule 31 (expr -> INTNUM .)
    (               reduce using rule 31 (expr -> INTNUM .)
    IF              reduce using rule 31 (expr -> INTNUM .)
    PRINT           reduce using rule 31 (expr -> INTNUM .)
    RETURN          reduce using rule 31 (expr -> INTNUM .)
    EYE             reduce using rule 31 (expr -> INTNUM .)
    ZEROS           reduce using rule 31 (expr -> INTNUM .)
    ONES            reduce using rule 31 (expr -> INTNUM .)
    ID              reduce using rule 31 (expr -> INTNUM .)
    FOR             reduce using rule 31 (expr -> INTNUM .)
    WHILE           reduce using rule 31 (expr -> INTNUM .)


state 19

    (32) expr -> FLOATNUM .

    ;               reduce using rule 32 (expr -> FLOATNUM .)
    +               reduce using rule 32 (expr -> FLOATNUM .)
    -               reduce using rule 32 (expr -> FLOATNUM .)
    *               reduce using rule 32 (expr -> FLOATNUM .)
    /               reduce using rule 32 (expr -> FLOATNUM .)
    DOTADD          reduce using rule 32 (expr -> FLOATNUM .)
    DOTSUB          reduce using rule 32 (expr -> FLOATNUM .)
    DOTMUL          reduce using rule 32 (expr -> FLOATNUM .)
    DOTDIV          reduce using rule 32 (expr -> FLOATNUM .)
    <               reduce using rule 32 (expr -> FLOATNUM .)
    >               reduce using rule 32 (expr -> FLOATNUM .)
    LE              reduce using rule 32 (expr -> FLOATNUM .)
    GE              reduce using rule 32 (expr -> FLOATNUM .)
    NE              reduce using rule 32 (expr -> FLOATNUM .)
    EQ              reduce using rule 32 (expr -> FLOATNUM .)
    '               reduce using rule 32 (expr -> FLOATNUM .)
    )               reduce using rule 32 (expr -> FLOATNUM .)
    ,               reduce using rule 32 (expr -> FLOATNUM .)
    ]               reduce using rule 32 (expr -> FLOATNUM .)
    :               reduce using rule 32 (expr -> FLOATNUM .)
    {               reduce using rule 32 (expr -> FLOATNUM .)
    BREAK           reduce using rule 32 (expr -> FLOATNUM .)
    CONTINUE        reduce using rule 32 (expr -> FLOATNUM .)
    [               reduce using rule 32 (expr -> FLOATNUM .)
    INTNUM          reduce using rule 32 (expr -> FLOATNUM .)
    FLOATNUM        reduce using rule 32 (expr -> FLOATNUM .)
    (               reduce using rule 32 (expr -> FLOATNUM .)
    IF              reduce using rule 32 (expr -> FLOATNUM .)
    PRINT           reduce using rule 32 (expr -> FLOATNUM .)
    RETURN          reduce using rule 32 (expr -> FLOATNUM .)
    EYE             reduce using rule 32 (expr -> FLOATNUM .)
    ZEROS           reduce using rule 32 (expr -> FLOATNUM .)
    ONES            reduce using rule 32 (expr -> FLOATNUM .)
    ID              reduce using rule 32 (expr -> FLOATNUM .)
    FOR             reduce using rule 32 (expr -> FLOATNUM .)
    WHILE           reduce using rule 32 (expr -> FLOATNUM .)


state 20

    (33) expr -> assignable .
    (37) assignment_statement -> assignable . = expr
    (38) assignment_statement -> assignable . ADDASSIGN expr
    (39) assignment_statement -> assignable . SUBASSIGN expr
    (40) assignment_statement -> assignable . MULASSIGN expr
    (41) assignment_statement -> assignable . DIVASSIGN expr
